<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diablo_teleop</name>
  <version>1.0.0</version>
  <description>Keyboard event capture</description>
  <maintainer email="vulcanyjx@todo.com">vulcanyjx</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>motion_msgs</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

