<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_msgs</name>
  <version>1.0.0</version>
  <description>Diablo robot massage interfaces</description>
  <maintainer email="vulcanyjx@todo.com">vulcanyjx</maintainer>
  <maintainer email="kevinlad@todo.com">vulcanyjx</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>

